--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Installing gh-pages
-    - run: npm install gh-pages
+      run: npm install gh-pages
       
     - name: Build React app
-    - run: npm run build
+      run: npm run build
 
     - name: Deploy via gh-pages
       run: gh-pages -d build
