--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
       run: npm run build
 
     - name: Deploy via gh-pages
-      run: gh-pages -d build
+      run: npm run deploy
       
 
