--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "process.env.CI=false react-scripts start",
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "process.env.CI=false react-scripts build",
+    "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
